<resources>
    <string name="app_name">CTB Merchant</string>
    <string name="get_started_text">Get Started</string>
    <string name="next_text">Next</string>
    <string name="skip_text">Skip</string>
    <string name="onboarding_heading_text1">Welcome to CTB Merchant</string>
    <string name="onboarding_heading_text2">Transform your space with ease</string>
    <string name="onboarding_heading_text3">Information</string>
    <string name="onboarding_subtitle_text1">Giving the best e-commerce experience, Delivering quality and reliability in one</string>
    <string name="onboarding_subtitle_text2">Get a seamless e-commerce Experience Explore innovative e-commerce solution, Error-free and easy accessibility</string>
    <string name="onboarding_subtitle_text3">Your ultimate online shopping destination, Revolutionizing the way you shop where convenience meets affordability, Experience the difference in e-commerce</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign UP</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="product">Products</string>
    <string name="status">Open</string>
    <string name="today">Today</string>
    <string name="payment_history">Payment History</string>
    <string name="order_text">Orders(11)</string>
    <string name="order1_text">You have received total 13 orders today</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="not_user">Not a user? Register</string>
    <string name="user">Already hav ean account? Sing In</string>
    <string name="sign_with_otp">Sign in with OTP</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="aggregator_text">Aggregator</string>
    <string name="merchant_text">Merchant</string>
    <string name="agree">I agree to the</string>
    <string name="tc">T&amp;C </string>
    <string name="policy">Privacy Policy</string>
    <string name="and">and </string>

</resources>