<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/shop_card"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">

            <LinearLayout
                android:id="@+id/img"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:background="@drawable/skip_button_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/app_logo"/>
            </LinearLayout>

            <TextView
                android:id="@+id/shop_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/shop_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:textColor="@color/colorGreen"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_below="@id/shop_name_text"
                android:layout_toEndOf="@id/img" />

            <Switch
                android:id="@+id/status_switch"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:trackTint="@color/colorSecondaryDark"
                android:thumbTint="@color/colorGreen"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/shop_name_text"
                android:layout_centerVertical="true"
                android:padding="2dp"/>


        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_card"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/container_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_card"
        android:layout_marginTop="20dp"
        android:padding="14dp">

        <TextView
            android:id="@+id/order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_text"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/order1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order1_text"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="@id/order_text"
            app:layout_constraintEnd_toStartOf="@id/order_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_text"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/order_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/orders"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_button"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/payment_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/payment_history"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/order_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
